--- a/src/YoutubeMusicPlayer/YoutubeMusicPlayer/MainPage.xaml
+++ b/src/YoutubeMusicPlayer/YoutubeMusicPlayer/MainPage.xaml
@@ -2,12 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:YoutubeMusicPlayer"
-             x:Class="YoutubeMusicPlayer.MainPage">
+             x:Class="YoutubeMusicPlayer.MainPage"
+             BackgroundColor="Black">
 
     <StackLayout>
         <Entry x:Name="Input" Text="PLNoB-hcIcvVd68WVqZGjWivuFgVgf5VVV"
                HorizontalOptions="Center"
-               VerticalOptions="CenterAndExpand"/>
+               VerticalOptions="CenterAndExpand"
+               TextColor="BlanchedAlmond" />
 
         <Button Text="Start"
                 HorizontalOptions="Center"
